--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,12 @@
   .card-reveal .card-back {
     transform: rotateY(0deg);
   }
+
+  .badge {
+    @apply flex gap-1 px-2 py-1 h-fit items-center font-bold text-white bg-primary rounded-full;
+  }
+
+  .badge-outline {
+    @apply flex gap-1 px-2 py-1 h-fit items-center font-bold border border-primary text-primary bg-white rounded-full;
+  }
 }
